src/main/webapp/style.css
body {
  font-family: Roboto;
  margin: 0;
  padding: 0;
}

h1 {
  margin: 0;
  margin-bottom: 5px;
  font-size: 1.6rem;
}

*:focus{
  outline: none;
}

#map-container {
  width: 100vw;
  height: 100vh;
}

#right-tab {
  position: absolute;
  top: 0;
  right: 0;
  width: 25vw;

  max-height: 100vh;
  overflow: auto;
}

/* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
#map {
  height: 100%;
}

#description {
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
}

#infowindow-pac-content .title {
  font-weight: bold;
}

#infowindow-pac-content {
  display: none;
}

#map #infowindow-pac-content {
  display: inline;
}

#pac-card {
  margin: 10px;
  max-height: 300px;
  padding: 20px;
  border-radius: 8px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  background-color: #fff;
  pointer-events: all;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

#pac-clear {
  position: absolute;
  right: 90px;
  top: 63px;
  font-weight: 100;
  font-size: 30px;
}

#pac-clear:hover,
#pac-clear:focus {
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

#pac-input {
  padding: .5rem;
  font-size: 1rem;
  font-weight: 300;
  text-overflow: ellipsis;
  width: calc(100% - 90px);
  padding-right: 30px;
  border-radius: 10px;
}

#pac-input:focus {
  border-color: #4d90fe;
}

#pac-container {
  display: flex;
  width: 100%;
  margin-top: 10px;
}

#restaurant-filter {
  padding: 0;
  width: 100%;
}

#restaurant-filter fieldset {
  padding: .5rem;
  margin: 0;
  border-radius: 10px;
}

#submit-button {
  width: 40px;
  margin: 0;
  margin-left: 5px;
  background-color: #4d90fe;
  border: none;
  border-radius: 400px;
  color: white;
  padding: 10px;
  text-align: center;
  display: inline-block;
  font-size: 1rem;
}

#result-container {
  display: none;
  margin: 10px;
  padding: 20px;
  border-radius: 8px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
  background-color: #fff;
  pointer-events: all;

  flex-direction: column;
  align-items: center;
}

#restaurant-details {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;

  margin-top: 10px;
}

#restaurant-details h2 {
  margin: .2rem 0;
  font-size: 1rem;
}

#restaurant-details h3 {
  margin: .5rem 0;
  font-size: 1.2rem;
  text-align: center;
  display: inline;
}

#restaurant-title {
  display: flex;
  align-items: center;
  justify-content: center;
}

#restaurant-image{
  height: 200px;
  width: calc(25vw - 80px);
  object-fit: cover;
  margin: .5rem 0;
}

#restaurant-links {
  margin: 10px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#restaurant-links a {
  margin-left: 10px;
}

#restaurant-links a svg {
  height: 30px;
  width: 30px;
}

#restaurant-title a svg {
  color: #4d90fe;
  margin: 0 10px;
}

#rating-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

#rating-users-number, #rating-number {
  color: rgba(0, 0, 0, 0.54);
}

.rating-inactive {
  display: none;
  width: 1rem;
  height: 1rem;
}

.rating-active {
  display: block;
  width: 1rem;
  height: 1rem;
}

#rating-container {
  display: inline-flex;
}

#restaurant-buttons {
  width: 100%;
  display: flex;
}

#restaurant-buttons button {
  font-size: 1rem;
  width: 50%;
  margin: 5px;
  padding: 5px;
  border: none;
  border-radius: 3px;
  text-decoration: none;
  cursor: pointer;
  background: #F5F5F5;
}

#restaurant-buttons button:hover {
  background: #4d90fe;
}

#result-hide-button {
  display: none;
}

#result-share-container {
  display: flex;
}

#infowindow-restaurant-content {
  display: flex;
  align-items: center;
}

#infowindow-restaurant-content * {
  padding-left: 3px;
}

#info-restaurant-name {
  font-size: 1.1rem;
}

.hide {
  display: none !important;
}

.show {
  display: block;
}

#resize-nav-button {
  position: relative;
  top: -12px;
  right: -10px;
  border: 0px;
  background: transparent;
}

#price-filter-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-top: 10px;
  font-size: 1em;
}

#price-filter {
  width: 70%;
}

#price-filter-max {
  display: flex;
  align-items: center;
}

.price-filter-active {
  background-color: transparent;
  color: darkgreen;
  font-size: 1.3em;
}

.price-filter-inactive {
  background-color: transparent;
  color: darkgray;
  font-size: 1.1em;
}

@media only screen and (max-width: 768px) {
  #map-container {
    height: 100%;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
  }

  #right-tab {
    width: 100vw;
    height: 100%;
    pointer-events: none;
  }

  #result-container {
    max-height: 50vh;
    margin: 10px;
    padding: 10px;
    width: calc(100% - 20px);
    position: absolute;
    bottom: 0;
    left: 0;
    transition: max-height 0.3s ease-in-out;
    overflow: auto;
  }


  #result-container.result-hidden {
    max-height: 40px;
    overflow: hidden;
  }

  #result-container.result-hidden #result-hide-button {
    margin-bottom: 10px;
  }

  #result-hide-button {
    display: block;
    height: 25px;

    border: none;
    background: none;
  }

  #result-hide-button svg {
    height: 25px;
    width: 25px;
    color: slategray;
  }

  #restaurant-image {
    height: 150px;
    width: 250px;
    object-fit: cover;
    margin: .5rem 0;
  }
}

